/*
 * Licensed to Elasticsearch B.V. under one or more contributor
 * license agreements. See the NOTICE file distributed with
 * this work for additional information regarding copyright
 * ownership. Elasticsearch B.V. licenses this file to you under
 * the Apache License, Version 2.0 (the "License"); you may
 * not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 */

import React from 'react';
import { requiredProps } from '../../../test';
import { shallow } from 'enzyme';
import { Query } from '../query';
import {
  FieldValueToggleFilter,
  FieldValueToggleFilterProps,
} from './field_value_toggle_filter';

describe('FieldValueToggleFilter', () => {
  test('render', () => {
    const props: FieldValueToggleFilterProps = {
      ...requiredProps,
      index: 0,
      onChange: () => {},
      query: Query.parse(''),
      config: {
        type: 'field_value_toggle',
        field: 'group',
        value: 'wazuh',
        name: 'Wazuh',
      },
    };

    const component = shallow(<FieldValueToggleFilter {...props} />);
    expect(component).toMatchSnapshot();
  });

  test('render - active', () => {
    const props: FieldValueToggleFilterProps = {
      ...requiredProps,
      index: 0,
      onChange: () => {},
      query: Query.parse('group:wazuh'),
      config: {
        type: 'field_value_toggle',
        field: 'group',
        value: 'wazuh',
        name: 'Wazuh',
      },
    };

    const component = shallow(<FieldValueToggleFilter {...props} />);
    expect(component).toMatchSnapshot();
  });

  test('render - active negated', () => {
    const props: FieldValueToggleFilterProps = {
      ...requiredProps,
      index: 0,
      onChange: () => {},
      query: Query.parse('-group:wazuh'),
      config: {
        type: 'field_value_toggle',
        field: 'group',
        value: 'wazuh',
        name: 'Wazuh',
      },
    };

    const component = shallow(<FieldValueToggleFilter {...props} />);
    expect(component).toMatchSnapshot();
  });

  test('render - active negated - custom negated name', () => {
    const props: FieldValueToggleFilterProps = {
      ...requiredProps,
      index: 0,
      onChange: () => {},
      query: Query.parse('-group:wazuh'),
      config: {
        type: 'field_value_toggle',
        field: 'group',
        value: 'wazuh',
        name: 'Wazuh',
        negatedName: 'Others',
      },
    };

    const component = shallow(<FieldValueToggleFilter {...props} />);
    expect(component).toMatchSnapshot();
  });
});
