// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValueToggleFilter render - active 1`] = `
<WuiFilterButton
  aria-pressed={true}
  hasActiveFilters={true}
  onClick={[Function]}
>
  Kibana
</WuiFilterButton>
`;

exports[`FieldValueToggleFilter render - active negated - custom negated name 1`] = `
<WuiFilterButton
  aria-pressed={true}
  hasActiveFilters={true}
  onClick={[Function]}
>
  Others
</WuiFilterButton>
`;

exports[`FieldValueToggleFilter render - active negated 1`] = `
<WuiFilterButton
  aria-pressed={true}
  hasActiveFilters={true}
  onClick={[Function]}
>
  Not Kibana
</WuiFilterButton>
`;

exports[`FieldValueToggleFilter render 1`] = `
<WuiFilterButton
  aria-pressed={false}
  hasActiveFilters={false}
  onClick={[Function]}
>
  Kibana
</WuiFilterButton>
`;
